# frontier-intelligence

./: .env.balanced.example  .env.example  .env.mode.full-vision.example  .env.mode.gigachat-2-only.example  .env.mode.no-vision.example  .gitattributes  .gitignore  .rsync-exclude  Makefile  docker-compose.build-host-fix.yml  docker-compose.host-fixes.yml  docker-compose.yml  pyproject.toml  requirements-crawl4ai.txt
admin/: Dockerfile  __init__.py
config/: enrichment_policy.yml  sources.yml  workspaces.yml
crawl4ai/: Dockerfile  crawl4ai_service.py  enrichment_engine.py  main.py
docs/: CHANGELOG-2026-03-28.md  README.md  deep-research-report (6).md  gigachat-balanced-rollout.md  monitoring-runtime-dashboard.md  ops-server-troubleshooting.md  pipeline-e2e-checklist.md  runtime-modes.md  security-git-preflight.md  server-docker-apparmor.md  server-git-workflow.md  source-connectors-runbook.md  trend-detection-future-roadmap.md
gpt2giga-proxy/: Dockerfile  disable_ssl.py  run_proxy.py
ingest/: Dockerfile  account_rotator.py  main.py  scheduler.py  source_runtime.py
mcp/: Dockerfile  Dockerfile.gateway  __init__.py  mcp_gateway.py  server.py
prometheus/: alertmanager.yml  alerts.yml  prometheus.yml
scripts/: apply-postgres-migrations.ps1  apply-postgres-migrations.sh  apply-runtime-mode.ps1  backfill_hn_algolia_window.py  backfill_medium_archive_window.py  backfill_posts_plaintext.py  check_env.py  cleanup_null_album_vision.py  enqueue_reindex_enriched_posts.py  fix_bad_tg_sources.sql  init_storage.py  push-and-remote-migrate.ps1  reprocess_done_for_sparse.py  (+27 more)
(+196 files in other folders)
